pkg/operator/controllers/guardrails/policies/gktemplates-src/aro-deny-labels/gator-test/worker-node-allowed.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1
request:
  uid: 2024ee9c-c374-413c-838d-e62bcb4826be
  kind:
    group: ""
    version: v1
    kind: Node
  resource:
    group: ""
    version: v1
    resource: node
  requestKind:
    group: ""
    version: v1
    kind: Node
  requestResource:
    group: ""
    version: v1
    resource: node
  name: worker
  operation: DELETE
  userInfo:
    username: kube-review
    uid: 611a19d7-6aa5-47d2-bba3-8c5df2bffbc7
  oldObject:
    kind: Node
    apiVersion: ""
    metadata:
      name: worker-0
      creationTimestamp:
      labels:
        node-role.kubernetes.io/worker: ""
        app: nginx
    spec:
      selector:
        matchLabels:
          app: nginx
      template:
        metadata:
          creationTimestamp:
          labels:
            app: nginx
        spec:
          containers:
          - name: nginx
            image: nginx
            ports:
            - containerPort: 8080
            resources: {}
      strategy: {}
    status: {}
  dryRun: true
  options:
    kind: CreateOptions
    apiVersion: meta.k8s.io/v1
  object:
