pkg/operator/controllers/guardrails/policies/gktemplates-src/aro-deny-labels/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: deny-labels
tests:
- name: machines-deny
  template: ../../gktemplates/aro-deny-labels.yaml
  constraint: ../../gkconstraints-test/aro-machines-deny.yaml
  cases:
  - name: master-machine-deny
    object: gator-test/master-machine-deny.yaml
    assertions:
    - violations: yes
      message: "user <kube-review> not allowed to delete resource with label <machine.openshift.io/cluster-api-machine-role: master>"
  - name: worker-machine-allowed
    object: gator-test/worker-machine-allowed.yaml
    assertions:
    - violations: no
  - name: no-label-machine-allowed
    object: gator-test/no-label-machine-allowed.yaml
    assertions:
    - violations: no
- name: nodes-deny
  template: ../../gktemplates/aro-deny-labels.yaml
  constraint: ../../gkconstraints-test/aro-nodes-deny.yaml
  cases:
  - name: master-node-deny
    object: gator-test/master-node-deny.yaml
    assertions:
    - violations: yes
      message: "user <fake-k8s-admin-review> not allowed to delete resource with label <node-role.kubernetes.io/master: >"
  - name: worker-node-allowed
    object: gator-test/worker-node-allowed.yaml
    assertions:
    - violations: no
  - name: no-label-node-allowed
    object: gator-test/no-label-node-allowed.yaml
    assertions:
    - violations: no
